<resources>
    <string name="app_name">机器人联盟</string>
    <string name="nothing">"暂无数据"</string>
    <!--主界面start-->
    <string name="main_dianming">"点到信息"</string>
    <string name="main_info">"训练课程"</string>
    <string name="main_results">"成绩信息"</string>
    <string name="main_paihang">"战力排行"</string>
    <string name="main_mine">"我的"</string>
    <string name="main_parents">"家长端"</string>
    <string name="main_coach">"教练端"</string>
    <!--主界面end-->

    <!--登录界面start-->
    <string name="login_name">用户名：</string>
    <string name="login_namehint">请输入用户名</string>
    <string name="login_padHint">请输入密码</string>
    <string name="login_password">密码：</string>
    <string name="login_btn">登录</string>
    <!--登录界面end-->

    <!--点名界面 begin-->
    <string name="task_task">点名</string>
    <string name="task_leave">请假</string>
    <string name="task_normal">正常</string>
    <!--点名界面 end-->

    <!--成绩排行 begin-->
    <string name="scores">成绩排行</string>
    <string name="scores_ranking">排名</string>
    <string name="scores_name">姓名</string>
    <string name="scores_combat">战斗力</string>
    <!--成绩排行 end-->

    <!--成绩排行详情 begin-->
    <string name="scores_details_day">当天</string>
    <string name="scores_details_month">当月</string>
    <string name="scores_details_name">项目名称</string>
    <string name="scores_details_power">力量成绩</string>
    <string name="scores_details_speed">速度成绩</string>
    <string name="scores_data">日期</string>
    <!--成绩排行详情 end-->

    <!--训练课程 begin-->
    <string name="course">训练课程</string>
    <string name="course_name_prompt">请输入课程名称</string>
    <!--训练课程 end-->

    <!--我 begin-->
    <string name="mine">我</string>
    <string name="mine_update">修改道馆信息</string>
    <string name="mine_list">学员列表</string>
    <string name="mine_info">点到信息</string>
    <string name="mine_contact">联系我们</string>
    <string name="mine_exit">退出</string>
    <!--我 end-->

    <!--我-修改道馆信息 begin-->
    <string name="updateinfo_name">道馆名字：</string>
    <string name="updateinfo_address">地址：</string>
    <string name="updateinfo_contact">联系人：</string>
    <string name="updateinfo_phone">联系电话：</string>
    <string name="updateinfo_name_hint">道馆名字</string>
    <string name="updateinfo_address_hint">地址</string>
    <string name="updateinfo_contact_hint">联系人</string>
    <string name="updateinfo_phone_hint">联系电话</string>
    <!--我-修改道馆信息 end-->

    <!--我-学员列表 begin-->
    <string name="studentinfo_name">姓名：</string>
    <string name="studentinfo_sex">性别：</string>
    <string name="studentinfo_age">年龄：</string>
    <string name="studentinfo_phone">家长电话：</string>
    <string name="studentinfo_address">体重：</string>
    <string name="studentinfo_name_hint">姓名</string>
    <string name="studentinfo_sex_hint">性别</string>
    <string name="studentinfo_age_hint">年龄</string>
    <string name="studentinfo_phone_hint">家长电话</string>
    <string name="studentinfo_address_hint">体重</string>
    <!--我-学员列表 end-->

    <!--我-点到信息查询 begin-->
    <string name="pointselect_name">姓名</string>
    <string name="pointselect_time">时间</string>
    <string name="pointselect_search">搜索</string>
    <!--我-点到信息查询 end-->

    <!--标题栏start-->
    <string name="btn_add">添加</string>
    <string name="btn_ok">完成</string>
    <string name="tv_cancel">取消</string>
    <!--标题栏end-->
</resources>
