<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include
        android:id="@+id/rl_title"
        layout="@layout/title" />
    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_below="@id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:weightSum="2">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/notice_title"
                android:text="啦啦"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/name_search"/>
            <TextView
                style="@style/notice_title"
                android:text="1024"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/view1"
        android:layout_below="@id/ll_name"
        style="@style/line_color_gray" />
    <LinearLayout
        android:id="@+id/ll_type"
        android:layout_below="@id/view1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:weightSum="2">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/notice_title"
                android:textColor="@color/blue4"
                android:text="@string/scores_details_day"/>
        </LinearLayout>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/notice_title"
                android:text="@string/scores_details_month"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/view2"
        android:layout_below="@id/ll_type"
        style="@style/line_color_gray" />

    <LinearLayout
        android:id="@+id/ll_list_title"
        android:layout_below="@id/view2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:weightSum="3">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/notice_title"
                android:text="@string/scores_details_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/notice_title"
                android:text="@string/scores_details_power"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/notice_title"
                android:text="@string/scores_details_speed"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/view3"
        android:layout_below="@id/ll_list_title"
        style="@style/line_color_gray" />
<ListView
    android:layout_below="@id/view3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
</ListView>
</RelativeLayout>