<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.libenli.weight.MyViewPager
        android:id="@+id/activity_main_coach_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/bottom_main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/main_coach_layout_dianming"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_coach_image_dianming"
                style="@style/main_image"
                android:src="@mipmap/dianming_nor" />

            <TextView
                android:id="@+id/main_coach_text_dianming"
                style="@style/main_textView"
                android:text="@string/main_dianming" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_coach_layout_rank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_coach_image_rank"
                style="@style/main_image"
                android:src="@mipmap/rank_nor" />

            <TextView
                android:id="@+id/main_coach_text_rank"
                style="@style/main_textView"
                android:text="@string/main_paihang" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_coach_layout_course"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_coach_image_course"
                style="@style/main_image"
                android:src="@mipmap/course_nor" />

            <TextView
                android:id="@+id/main_coach_text_course"
                style="@style/main_textView"
                android:text="@string/course" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_coach_layout_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_coach_image_mine"
                style="@style/main_image"
                android:src="@mipmap/me_nor" />

            <TextView
                android:id="@+id/main_coach_text_mine"
                style="@style/main_textView"
                android:text="@string/mine" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
